0.05
 - Fix bug with one character length attribute.

0.04 2020-04-28T15:01:29+02:00
 - Add test for element with space in attribute.
 - Rewrite METHODS to =head2 in doc.

0.03 2020-04-23T16:09:11+02:00
 - Add bigger test for cdata.
 - Fix Makefile.PL fails with no '.' in @INC.
 - Improve LICENSE AND COPYRIGHT section in doc.
 - Improve SYNOPSIS section in doc.
 - Update Module::Install to 1.19 version.
 - Update author github username.
 - Update author name.
 - Update copyright years.

0.02 2016-04-20T17:04:58+02:00
 - Fix dependencies to PYX::Utils.

0.01 2016-04-20T17:00:44+02:00
 - First version.