@@ -3,6 +3,8 @@ abstract: 'SGML to PYX parser.'
 author:
   - 'Michal Josef Spacek <skim@cpan.org>'
 build_requires:
+  English: 0
+  Error::Pure::Utils: 0
   ExtUtils::MakeMaker: 6.36
   File::Object: 0.07
   Test::More: 0
