@@ -27,6 +27,8 @@ resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=SGML-PYX';
 resources 'homepage' => 'https://github.com/michal-josef-spacek/SGML-PYX';
 resources 'repository' => 'git://github.com/michal-josef-spacek/SGML-PYX';
+test_requires 'English' => 0;
+test_requires 'Error::Pure::Utils' => 0;
 test_requires 'File::Object' => 0.07;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
