@@ -1,4 +1,5 @@
 0.05
+ - Add test for bad attribute parsing.
  - Fix bug with one character length attribute.
 
 0.04 2020-04-28T15:01:29+02:00
